Revert "Separate mixins"
This reverts commit bb54f5733462f29cf880fce7d706894127db9568.